Random -> GSL.Random, reexport of LinearAlgebra and Util

--- a/packages/gsl/hmatrix-gsl.cabal
+++ b/packages/gsl/hmatrix-gsl.cabal
@@ -35,9 +35,11 @@ library
                         Numeric.GSL.Fitting,
                         Numeric.GSL.ODE,
                         Numeric.GSL.Vector,
-                        Numeric.LinearAlgebra.Util.Random
+                        Numeric.GSL.Random,
                         Numeric.GSL,
                         Graphics.Plot
+                        Numeric.LinearAlgebra
+                        Numeric.LinearAlgebra.Util
                         
     other-modules:      Numeric.GSL.Internal
 
