--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -20,6 +20,9 @@ Description:        Purely functional interface to basic linear algebra
                     - "Numeric.LinearAlgebra.Algorithms": matrix computations
                     .
                     - "Numeric.LinearAlgebra": everything + instances of standard Haskell numeric classes
+                    .
+                    - "Numeric.LinearAlgebra.Util": additional functions
+                    
 Category:           Math
 tested-with:        GHC ==7.8
 
