containerboot moved to base

--- a/packages/base/hmatrix-base.cabal
+++ b/packages/base/hmatrix-base.cabal
@@ -37,6 +37,7 @@ library
                         Data.Packed.Development,
                         Numeric.Conversion
                         Numeric.LinearAlgebra.LAPACK
+                        Data.Packed.Numeric
                         Numeric.Vectorized
                         
     other-modules:      Data.Packed.Internal,
